--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+    dependencies {
+        classpath 'net.sf.proguard:proguard-gradle:6.2.2'
+    }
+}
 plugins {
     id 'java'
 }
@@ -13,4 +18,15 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+
+task myProguardTask(type: proguard.gradle.ProGuardTask) {
+    optimizationpasses(5)
+    allowaccessmodification()
+    mergeinterfacesaggressively()
+    overloadaggressively()
+    flattenpackagehierarchy("io.github.fabricreator.level")
+    obfuscationdictionary("proguard/dictionary.txt")
+    classobfuscationdictionary("proguard/classdictionary.txt")
 }
