--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ task myProguardTask(type: proguard.gradle.ProGuardTask) {
     allowaccessmodification()
     mergeinterfacesaggressively()
     overloadaggressively()
-    flattenpackagehierarchy("io.github.fabricreator.level")
     obfuscationdictionary("proguard/dictionary.txt")
     classobfuscationdictionary("proguard/classdictionary.txt")
+    packageobfuscationdictionary("proguard/packagedictionary.txt")
 }
