--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,13 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile "org.inventivetalent:nbt-lib:1.1.0-SNAPSHOT"
+    //implementation "org.inventivetalent:nbt-lib:1.1.0-SNAPSHOT"
 }
 
 
 task myProguardTask(type: proguard.gradle.ProGuardTask) {
+    injars("build/libs/FabriCreator-1.0-SNAPSHOT.jar")
+    outjars("build/libs/FabriCreator-projarrd-1.0.SNAPSHOT.jar")
     optimizationpasses(5)
     allowaccessmodification()
     mergeinterfacesaggressively()
@@ -34,4 +36,6 @@ task myProguardTask(type: proguard.gradle.ProGuardTask) {
     obfuscationdictionary("proguard/dictionary.txt")
     classobfuscationdictionary("proguard/classdictionary.txt")
     packageobfuscationdictionary("proguard/packagedictionary.txt")
+    dontwarn()
+    keep("class io.github.asbestosmc.fabricreator.FabriCreator")
 }
